@@ -416,7 +416,8 @@ DEVICE_ACCESS(sgi_de)
 
 	/*
 	 *  Treat all registers as read/write, by default.  Sometimes these
-	 *  are accessed as 32-bit words, sometimes as 64-bit words.
+	 *  are accessed as 32-bit words, sometimes as 64-bit words to access
+	 *  two adjacent registers in one operation.
 	 */
 	if (len == 8) {
 		if (writeflag == MEM_WRITE) {
@@ -553,6 +554,12 @@ DEVICE_ACCESS(sgi_de)
 		    writeflag == MEM_WRITE ? (long long)idata : (long long)odata);
 		break;
 
+	case CRIME_DE_XFER_STRD_SRC:
+		debug("[ sgi_de: %s CRIME_DE_XFER_STRD_SRC: 0x%016llx ]\n",
+		    writeflag == MEM_WRITE ? "write to" : "read from",
+		    writeflag == MEM_WRITE ? (long long)idata : (long long)odata);
+		break;
+
 	case CRIME_DE_XFER_STEP_X:
 		debug("[ sgi_de: %s CRIME_DE_XFER_STEP_X: 0x%016llx ]\n",
 		    writeflag == MEM_WRITE ? "write to" : "read from",
@@ -561,6 +568,18 @@ DEVICE_ACCESS(sgi_de)
 
 	case CRIME_DE_XFER_STEP_Y:
 		debug("[ sgi_de: %s CRIME_DE_XFER_STEP_Y: 0x%016llx ]\n",
+		    writeflag == MEM_WRITE ? "write to" : "read from",
+		    writeflag == MEM_WRITE ? (long long)idata : (long long)odata);
+		break;
+
+	case CRIME_DE_XFER_ADDR_DST:
+		debug("[ sgi_de: %s CRIME_DE_XFER_ADDR_DST: 0x%016llx ]\n",
+		    writeflag == MEM_WRITE ? "write to" : "read from",
+		    writeflag == MEM_WRITE ? (long long)idata : (long long)odata);
+		break;
+
+	case CRIME_DE_XFER_STRD_DST:
+		debug("[ sgi_de: %s CRIME_DE_XFER_STRD_DST: 0x%016llx ]\n",
 		    writeflag == MEM_WRITE ? "write to" : "read from",
 		    writeflag == MEM_WRITE ? (long long)idata : (long long)odata);
 		break;
@@ -634,12 +653,10 @@ DEVICE_ACCESS(sgi_de)
 		//uint32_t stipple_mode = d->de_reg[(CRIME_DE_STIPPLE_MODE - 0x2000) / sizeof(uint32_t)];
 		uint32_t rop = d->de_reg[(CRIME_DE_ROP - 0x2000) / sizeof(uint32_t)];
 
-		uint32_t x1 = (d->de_reg[(CRIME_DE_X_VERTEX_0 - 0x2000) / sizeof(uint32_t)]
-		    >> 16) & 0xfff;
-		uint32_t y1 = d->de_reg[(CRIME_DE_X_VERTEX_0 - 0x2000) / sizeof(uint32_t)]& 0xfff;
-		uint32_t x2 = (d->de_reg[(CRIME_DE_X_VERTEX_1 - 0x2000) / sizeof(uint32_t)]
-		    >> 16) & 0xfff;
-		uint32_t y2 = d->de_reg[(CRIME_DE_X_VERTEX_1 - 0x2000) / sizeof(uint32_t)]& 0xfff;
+		uint32_t x1 = (d->de_reg[(CRIME_DE_X_VERTEX_0 - 0x2000) / sizeof(uint32_t)] >> 16) & 0x7ff;
+		uint32_t y1 = d->de_reg[(CRIME_DE_X_VERTEX_0 - 0x2000) / sizeof(uint32_t)]& 0x7ff;
+		uint32_t x2 = (d->de_reg[(CRIME_DE_X_VERTEX_1 - 0x2000) / sizeof(uint32_t)] >> 16) & 0x7ff;
+		uint32_t y2 = d->de_reg[(CRIME_DE_X_VERTEX_1 - 0x2000) / sizeof(uint32_t)]& 0x7ff;
 		size_t x, y;
 
 		debug("[ sgi_de: STARTING DRAWING COMMAND: op = 0x%08x,"
@@ -668,8 +685,8 @@ DEVICE_ACCESS(sgi_de)
 				src_x = addr_src;
 				src_y = 0;
 			} else {
-				src_x = (addr_src >> 16) & 0xfff;
-				src_y = addr_src & 0xfff;
+				src_x = (addr_src >> 16) & 0x7ff;
+				src_y = addr_src & 0x7ff;
 			}
 
 			if (step_x != dst_bufdepth || step_y != 1) {
@@ -689,60 +706,67 @@ DEVICE_ACCESS(sgi_de)
 			printf("not all DE_DRAWMODE_BYTEMASK set: TODO\n");
 		}
 		
-		// primitive rendering direction
+		// primitive rendering direction (not for Lines? and presumably
+		// not for Points either :-)
 		int dx = op & DE_PRIM_RL ? -1 :  1;
 		int dy = op & DE_PRIM_TB ?  1 : -1;
 
 		uint16_t saved_src_x = src_x;
+
+		/*
+		 *  Drawing is limited to 2048 x 2048 pixel space.
+		 *
+		 *  TODO: MAYBE it is really -2048 to 2027, i.e. 12 bits of
+		 *  pixel space. Perhaps it is possible to figure out
+		 *  experimentally some day, e.g. by drawing lines from
+		 *  -10,10 to 500,20 and see whether the real hardware
+		 *  interprets -10 as -10 or 0x800 - 10.
+		 */
 		uint16_t endx = (x2 + dx) & 0x7ff;
 		uint16_t endy = (y2 + dy) & 0x7ff;
 
 		/*
-		 *  It seems that depending on the width of the line to draw,
+		 *  It seems that depending on the length of the line to draw,
 		 *  the upper 16 bits of the pattern are "skipped". (This is
 		 *  needed to make the PROM work nicely.)
 		 */
 		if (drawmode & DE_DRAWMODE_LINE_STIP && x2-x1 <= 15)
 			pattern <<= 16;
 
+		int lx = abs((int)(x2 - x1)), ly = abs((int)(y2 - y1));
+		int linelen = lx > ly ? lx : ly;
+
 		switch (op & 0xff000000) {
 		case DE_PRIM_LINE:
-		case DE_PRIM_RECTANGLE:
-			break;
-		default:fatal("[ sgi_de: UNIMPLEMENTED drawing op = 0x%08x,"
-			    " x1=%i y1=%i x2=%i y2=%i fg=0x%x bg=0x%x pattern=0x%08x ]\n",
-			    op, x1, y1, x2, y2, fg, bg, pattern);
-			exit(1);
-		}
+			if (drawmode & DE_DRAWMODE_XFER_EN)
+				fatal("[ sgi_de: XFER_EN for LINE op? ]\n");
 
-		// Drawing is limited to 2048 x 2048 pixel space.
-		// TODO: MAYBE it is really -2048 to 2027, i.e. 12 bits of pixel
-		// space. Perhaps it is possible to figure out experimentally some day.
-		for (y = y1; y != endy; y = (y + dy) & 0x7ff) {
-			src_x = saved_src_x;
-			for (x = x1; x != endx; x = (x + dx) & 0x7ff) {
+			// The PROM uses width 32, but NetBSD documents it as "half pixels".
+			// if ((op & DE_PRIM_LINE_WIDTH_MASK) != 2)
+			//	fatal("[ sgi_de: LINE_WIDTH_MASK = %i ]\n", op & DE_PRIM_LINE_WIDTH_MASK);
+
+			if (linelen == 0)
+				linelen ++;
+
+			for (int i = 0; i < ((op & DE_PRIM_LINE_SKIP_END)? linelen : linelen+1); ++i) {
+				x = (x2 * i + x1 * (linelen-i)) / linelen;
+				y = (y2 * i + y1 * (linelen-i)) / linelen;
+
 				uint32_t color = fg;
 
-				// Pixel colors copied from another source.
-				// (OpenBSD draws characters using this mechanism.)
-				if (drawmode & DE_DRAWMODE_XFER_EN)
-					horrible_getputpixel(false, cpu, d,
-						src_x, src_y, &color, src_mode);
+				bool draw = true;
+				if (drawmode & DE_DRAWMODE_LINE_STIP) {
+					if (drawmode & DE_DRAWMODE_OPAQUE_STIP)
+						color = (pattern & 0x80000000UL) ? fg : bg;
+					else
+						draw = (pattern & 0x80000000UL)? true : false;
+				}
 
 				// Raster-OP.
 				// TODO: Other ops.
 				// TODO: Should this be before or after other things?
 				if (drawmode & DE_DRAWMODE_ROP && rop == OPENGL_LOGIC_OP_COPY_INVERTED)
-					color = 255 - color;
-
-				// NetBSD draws characters using this mechanism.
-				if (drawmode & DE_DRAWMODE_OPAQUE_STIP)
-					color = (pattern & 0x80000000UL) ? fg : bg;
-
-				// The PROM draws bitmaps using this mechanism.
-				bool draw = true;
-				if (drawmode & DE_DRAWMODE_LINE_STIP)
-					draw = (pattern & 0x80000000UL)? true : false;
+					color = 0xffffffff - color;
 
 				if (draw)
 					horrible_getputpixel(true, cpu, d,
@@ -751,14 +775,59 @@ DEVICE_ACCESS(sgi_de)
 				// I'm not sure if the pattern rotates, or is just
 				// shifted out, so for now it is a rotate.
 				pattern = (pattern << 1) | (pattern >> 31);
-
-				if (src_is_linear)
-					src_x += step_x;
-				else
-					src_x = (src_x + dx) & 0x7ff;
 			}
-			src_y = (src_y + dy) & 0x7ff;
+			break;
+
+		case DE_PRIM_RECTANGLE:
+			for (y = y1; y != endy; y = (y + dy) & 0x7ff) {
+				src_x = saved_src_x;
+				for (x = x1; x != endx; x = (x + dx) & 0x7ff) {
+					uint32_t color = fg;
+
+					// Pixel colors copied from another source.
+					// (OpenBSD draws characters using this mechanism.)
+					if (drawmode & DE_DRAWMODE_XFER_EN)
+						horrible_getputpixel(false, cpu, d,
+							src_x, src_y, &color, src_mode);
+
+					bool draw = true;
+					if (drawmode & DE_DRAWMODE_POLY_STIP) {
+						if (drawmode & DE_DRAWMODE_OPAQUE_STIP)
+							color = (pattern & 0x80000000UL) ? fg : bg;
+						else
+							draw = (pattern & 0x80000000UL)? true : false;
+					}
+
+					// Raster-OP.
+					// TODO: Other ops.
+					// TODO: Should this be before or after other things?
+					if (drawmode & DE_DRAWMODE_ROP && rop == OPENGL_LOGIC_OP_COPY_INVERTED)
+						color = 0xffffffff - color;
+
+					if (draw)
+						horrible_getputpixel(true, cpu, d,
+							x, y, &color, dst_mode);
+
+					// I'm not sure if the pattern rotates, or is just
+					// shifted out, so for now it is a rotate.
+					pattern = (pattern << 1) | (pattern >> 31);
+
+					if (src_is_linear)
+						src_x += step_x;
+					else
+						src_x = (src_x + dx) & 0x7ff;
+				}
+				
+				src_y = (src_y + dy) & 0x7ff;
+			}
+			break;
+
+		default:fatal("[ sgi_de: UNIMPLEMENTED drawing op = 0x%08x,"
+			    " x1=%i y1=%i x2=%i y2=%i fg=0x%x bg=0x%x pattern=0x%08x ]\n",
+			    op, x1, y1, x2, y2, fg, bg, pattern);
+			exit(1);
 		}
+
 	}
 
 	if (writeflag == MEM_READ)
